账号一键分刀新增手动刀选项

--- a/public/css/team.css
+++ b/public/css/team.css
@@ -72,6 +72,9 @@ h5 {
   opacity:0.5;
 }
 
-#demoForm {
+#bossList {
+  text-align: center; /* 图片居中 */
+}
+#isAuto {
   text-align: center; /* 图片居中 */
 }
